--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 ### Site Settings ###
 title               : Binaya
 description         : >-
-                      I turn coffee :coffee: into code,
-                      use tabs over spaces
-                      and never broke production.
+                      DevOps Engineer.
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : BS14/BS14.github.io      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
