--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,13 @@
-- title: Student, Harvard CS
-  from: 2014
-  to: 2018
+- title: Student, Kathmandu University [B.E in Electrical and Electronics Engineering]
+  from: 2012
+  to: 2016
   description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 
-- title: Software Engineer, Google, UK
-  from: 2018
-  to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: L2 Support and Monitoring, Worldlink Communications, Lalitpur Nepal
+  from: 2017
+  to: 2020
+  description: Managed and troubleshot Huawei and Nokia OLTs, BRAS, and network infrastructure, optimized connectivity, trained support teams, and ensured system reliability through proactive issue escalation and collaboration.
