--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Binaya
-  image             : https://imgur.com/vyXlAAJ.jpg #https://i.imgur.com/uyDNQnn.jpg
+  image             : https://i.imgur.com/g4p9Gv6.png #https://i.imgur.com/uyDNQnn.jpg
 #  behance           : your_username
 # dribbble          : your_username
   email             : bnay14@gmail.com
