--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title               : Binaya
 description         : >-
                       DevOps Engineer.
-baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+baseurl             : "blog.binaya14.com.np"            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : BS14/BS14.github.io      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
 open_new_tab        : false                    # Opens external URLs in new tab (works for posts, projects and navbar only)
